@@ -14,10 +14,10 @@ fi
 # Otherwise, pick based on the frontend.
 case "$DEBIAN_FRONTEND" in
 "slang")
-	cfdisk $DISK
+	LANG=C cfdisk $DISK
 	;;
 "newt")
-	cfdisk $DISK
+	LANG=C cfdisk $DISK
 	;;
 *)
 	fdisk $DISK
