@@ -3,6 +3,10 @@ partitioner (0.20) UNRELEASED; urgency=low
   * Bastian Blank
     - Use sector size for size calculation.
     - Ignore ignorable exceptions.
+  * Kenshi Muto
+    - util-linux maintainer didn't response anything...
+      It is time to run cfdisk as LANG=C. I hope this change would be
+      reverted before Sarge release.
   * Translations:
     - Dafydd Harries : Added Welsh translation (cy.po)
 
